--- a/archives/toutiao-search/2024-04-12.md
+++ b/archives/toutiao-search/2024-04-12.md
@@ -1,55 +1,74 @@
 # 2024-04-12
 
-共 192 条
+共 210 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Apr 12 2024 12:00:39 GMT+0800 (China Standard Time) -->
-1. [警方通报轿车撞倒女子后反复碾压](https://so.toutiao.com/search?keyword=警方通报轿车撞倒女子后反复碾压)
-1. [保安队长涉嫌多次性侵66岁女队员](https://so.toutiao.com/search?keyword=保安队长涉嫌多次性侵66岁女队员)
-1. [让精耕细作迎接新技术革命](https://so.toutiao.com/search?keyword=让精耕细作迎接新技术革命)
+<!-- 最后更新时间 Fri Apr 12 2024 13:01:01 GMT+0800 (China Standard Time) -->
+1. [岸田吹捧：美国的领导不可或缺](https://so.toutiao.com/search?keyword=岸田吹捧：美国的领导不可或缺)
 1. [大V谈自费装路灯被拆：政府应安上](https://so.toutiao.com/search?keyword=大V谈自费装路灯被拆：政府应安上)
+1. [设备更新和以旧换新行动方案](https://so.toutiao.com/search?keyword=设备更新和以旧换新行动方案)
+1. [警方通报轿车撞倒女子后反复碾压](https://so.toutiao.com/search?keyword=警方通报轿车撞倒女子后反复碾压)
 1. [五一调休放5天](https://so.toutiao.com/search?keyword=五一调休放5天)
 1. [越南女首富庭审时的最后陈词](https://so.toutiao.com/search?keyword=越南女首富庭审时的最后陈词)
 1. [男子被开除2天又返聘 工资低一万多](https://so.toutiao.com/search?keyword=男子被开除2天又返聘+工资低一万多)
-1. [今年养老金涨幅会进一步下降吗](https://so.toutiao.com/search?keyword=今年养老金涨幅会进一步下降吗)
-1. [岸田：世界需要美国这样的领导者](https://so.toutiao.com/search?keyword=岸田：世界需要美国这样的领导者)
 1. [台名嘴谈马英九访大陆遭美日抹黑](https://so.toutiao.com/search?keyword=台名嘴谈马英九访大陆遭美日抹黑)
-1. [钟美美现状：自称过气有钱就挣](https://so.toutiao.com/search?keyword=钟美美现状：自称过气有钱就挣)
-1. [东北林大男子校内追逐女生被制服](https://so.toutiao.com/search?keyword=东北林大男子校内追逐女生被制服)
-1. [官方辟谣西安骡马市打架致人死亡](https://so.toutiao.com/search?keyword=官方辟谣西安骡马市打架致人死亡)
-1. [台军前舰长：我想去看站起来的祖国](https://so.toutiao.com/search?keyword=台军前舰长：我想去看站起来的祖国)
-1. [韩国歌手朴宝蓝去世](https://so.toutiao.com/search?keyword=韩国歌手朴宝蓝去世)
-1. [小米SU7车主回应跑滴滴：纯属瞎玩](https://so.toutiao.com/search?keyword=小米SU7车主回应跑滴滴：纯属瞎玩)
-1. [余承东直呼行业太卷了](https://so.toutiao.com/search?keyword=余承东直呼行业太卷了)
-1. [公职人员打人被训诫 被打者不服](https://so.toutiao.com/search?keyword=公职人员打人被训诫+被打者不服)
-1. [岸田到美演讲“抖包袱”博笑引争议](https://so.toutiao.com/search?keyword=岸田到美演讲“抖包袱”博笑引争议)
-1. [普京：俄罗斯愿就乌克兰问题对话](https://so.toutiao.com/search?keyword=普京：俄罗斯愿就乌克兰问题对话)
-1. [警方通报女子一丝不挂大闹男生宿舍](https://so.toutiao.com/search?keyword=警方通报女子一丝不挂大闹男生宿舍)
-1. [张伟丽：我非常尊重闫晓楠](https://so.toutiao.com/search?keyword=张伟丽：我非常尊重闫晓楠)
-1. [骑手称被4S店员工给差评后接不到单](https://so.toutiao.com/search?keyword=骑手称被4S店员工给差评后接不到单)
-1. [南京北站造型被吐槽像卫生巾](https://so.toutiao.com/search?keyword=南京北站造型被吐槽像卫生巾)
-1. [伊朗对联合国开不惩罚以色列条件](https://so.toutiao.com/search?keyword=伊朗对联合国开不惩罚以色列条件)
-1. [如何看待莫迪关于中印关系的表态](https://so.toutiao.com/search?keyword=如何看待莫迪关于中印关系的表态)
-1. [菲律宾前总统：美国让南海充满争吵](https://so.toutiao.com/search?keyword=菲律宾前总统：美国让南海充满争吵)
-1. [激光炮解救被吊在电线上的夜鹭](https://so.toutiao.com/search?keyword=激光炮解救被吊在电线上的夜鹭)
+1. [岸田文雄再提“中国威胁论”](https://so.toutiao.com/search?keyword=岸田文雄再提“中国威胁论”)
+1. [泽连斯基再次呼吁军援乌克兰](https://so.toutiao.com/search?keyword=泽连斯基再次呼吁军援乌克兰)
 1. [“提灯定损”村的违建房屋能拆除吗](https://so.toutiao.com/search?keyword=“提灯定损”村的违建房屋能拆除吗)
-1. [辛普森去世](https://so.toutiao.com/search?keyword=辛普森去世)
+1. [保安队长涉嫌多次性侵66岁女队员](https://so.toutiao.com/search?keyword=保安队长涉嫌多次性侵66岁女队员)
+1. [官方辟谣西安骡马市打架致人死亡](https://so.toutiao.com/search?keyword=官方辟谣西安骡马市打架致人死亡)
+1. [钟美美现状：自称过气有钱就挣](https://so.toutiao.com/search?keyword=钟美美现状：自称过气有钱就挣)
+1. [专家：日本正努力成为能打仗的国家](https://so.toutiao.com/search?keyword=专家：日本正努力成为能打仗的国家)
+1. [韩国歌手朴宝蓝去世](https://so.toutiao.com/search?keyword=韩国歌手朴宝蓝去世)
+1. [男子被狗抓伤没打疫苗发病3天离世](https://so.toutiao.com/search?keyword=男子被狗抓伤没打疫苗发病3天离世)
+1. [博主：小米被打脸 荣耀笑了](https://so.toutiao.com/search?keyword=博主：小米被打脸+荣耀笑了)
+1. [余承东直呼行业太卷了](https://so.toutiao.com/search?keyword=余承东直呼行业太卷了)
+1. [女摊主遭遇“鬼手换钞”](https://so.toutiao.com/search?keyword=女摊主遭遇“鬼手换钞”)
+1. [警方通报女子一丝不挂大闹男生宿舍](https://so.toutiao.com/search?keyword=警方通报女子一丝不挂大闹男生宿舍)
+1. [30万年薪的银行员工要过紧日子了](https://so.toutiao.com/search?keyword=30万年薪的银行员工要过紧日子了)
+1. [今年养老金涨幅会进一步下降吗](https://so.toutiao.com/search?keyword=今年养老金涨幅会进一步下降吗)
+1. [小米SU7车主回应跑滴滴：纯属瞎玩](https://so.toutiao.com/search?keyword=小米SU7车主回应跑滴滴：纯属瞎玩)
+1. [张伟丽：我非常尊重闫晓楠](https://so.toutiao.com/search?keyword=张伟丽：我非常尊重闫晓楠)
 1. [万达出售旗下圣汐游艇](https://so.toutiao.com/search?keyword=万达出售旗下圣汐游艇)
-1. [成都一女子买两块雪花酥花185元](https://so.toutiao.com/search?keyword=成都一女子买两块雪花酥花185元)
-1. [光大集团原董事长唐双宁被提起公诉](https://so.toutiao.com/search?keyword=光大集团原董事长唐双宁被提起公诉)
+1. [岸田到美演讲“抖包袱”博笑被嘲](https://so.toutiao.com/search?keyword=岸田到美演讲“抖包袱”博笑被嘲)
+1. [公职人员打人被训诫 被打者不服](https://so.toutiao.com/search?keyword=公职人员打人被训诫+被打者不服)
+1. [台军前舰长：我想去看站起来的祖国](https://so.toutiao.com/search?keyword=台军前舰长：我想去看站起来的祖国)
+1. [东北林大男子校内追逐女生被制服](https://so.toutiao.com/search?keyword=东北林大男子校内追逐女生被制服)
+1. [伊朗对联合国开不惩罚以色列条件](https://so.toutiao.com/search?keyword=伊朗对联合国开不惩罚以色列条件)
+1. [胡锡进谈被骂：承受反对意见很正常](https://so.toutiao.com/search?keyword=胡锡进谈被骂：承受反对意见很正常)
+1. [辛普森去世](https://so.toutiao.com/search?keyword=辛普森去世)
+1. [黑人女粉丝在炸鸡店告白特朗普](https://so.toutiao.com/search?keyword=黑人女粉丝在炸鸡店告白特朗普)
+1. [菲律宾前总统：美国让南海充满争吵](https://so.toutiao.com/search?keyword=菲律宾前总统：美国让南海充满争吵)
 1. [公职人员打酒店老板处罚是否畸轻](https://so.toutiao.com/search?keyword=公职人员打酒店老板处罚是否畸轻)
+1. [普京：俄罗斯愿就乌克兰问题对话](https://so.toutiao.com/search?keyword=普京：俄罗斯愿就乌克兰问题对话)
+1. [激光炮解救被吊在电线上的夜鹭](https://so.toutiao.com/search?keyword=激光炮解救被吊在电线上的夜鹭)
+1. [瓜农称在加油站被员工偷西瓜](https://so.toutiao.com/search?keyword=瓜农称在加油站被员工偷西瓜)
+1. [如何看待莫迪关于中印关系的表态](https://so.toutiao.com/search?keyword=如何看待莫迪关于中印关系的表态)
+1. [南京北站造型被吐槽像卫生巾](https://so.toutiao.com/search?keyword=南京北站造型被吐槽像卫生巾)
+1. [中国卫星拍下地球月球新合影](https://so.toutiao.com/search?keyword=中国卫星拍下地球月球新合影)
+1. [广州举行“三月三”民俗文化活动](https://so.toutiao.com/search?keyword=广州举行“三月三”民俗文化活动)
+1. [华为视觉智驾能超越特斯拉吗](https://so.toutiao.com/search?keyword=华为视觉智驾能超越特斯拉吗)
+1. [韩总统府如何应对高官集体请辞](https://so.toutiao.com/search?keyword=韩总统府如何应对高官集体请辞)
+1. [成都一女子买两块雪花酥花185元](https://so.toutiao.com/search?keyword=成都一女子买两块雪花酥花185元)
+1. [商铺已交房十年 开发商强制要收回](https://so.toutiao.com/search?keyword=商铺已交房十年+开发商强制要收回)
+1. [国际金价跳水仍处历史高位](https://so.toutiao.com/search?keyword=国际金价跳水仍处历史高位)
+1. [博主痛斥游戏《蛋仔派对》](https://so.toutiao.com/search?keyword=博主痛斥游戏《蛋仔派对》)
+1. [赖清德行政团队公布后遭台名嘴讽刺](https://so.toutiao.com/search?keyword=赖清德行政团队公布后遭台名嘴讽刺)
+1. [让精耕细作迎接新技术革命](https://so.toutiao.com/search?keyword=让精耕细作迎接新技术革命)
+1. [岸田：世界需要美国这样的领导者](https://so.toutiao.com/search?keyword=岸田：世界需要美国这样的领导者)
+1. [岸田到美演讲“抖包袱”博笑引争议](https://so.toutiao.com/search?keyword=岸田到美演讲“抖包袱”博笑引争议)
+1. [骑手称被4S店员工给差评后接不到单](https://so.toutiao.com/search?keyword=骑手称被4S店员工给差评后接不到单)
+1. [光大集团原董事长唐双宁被提起公诉](https://so.toutiao.com/search?keyword=光大集团原董事长唐双宁被提起公诉)
 1. [摊主遭遇鬼手换钞 视频记录全过程](https://so.toutiao.com/search?keyword=摊主遭遇鬼手换钞+视频记录全过程)
 1. [台名嘴：赖清德会是“史上最跛脚”](https://so.toutiao.com/search?keyword=台名嘴：赖清德会是“史上最跛脚”)
 1. [金价一天多变 批发商连夜进货](https://so.toutiao.com/search?keyword=金价一天多变+批发商连夜进货)
 1. [国产720Wh/kg全固态电池发布引关注](https://so.toutiao.com/search?keyword=国产720Wh/kg全固态电池发布引关注)
-1. [男子被狗抓伤没打疫苗发病3天离世](https://so.toutiao.com/search?keyword=男子被狗抓伤没打疫苗发病3天离世)
 1. [俄军对乌能源设施发动大规模袭击](https://so.toutiao.com/search?keyword=俄军对乌能源设施发动大规模袭击)
 1. [广汽全固态电池续航可超1000公里](https://so.toutiao.com/search?keyword=广汽全固态电池续航可超1000公里)
 1. [美日菲联合声明炒作“中国威胁”](https://so.toutiao.com/search?keyword=美日菲联合声明炒作“中国威胁”)
 1. [南京一原一级高级警长邓雷被查](https://so.toutiao.com/search?keyword=南京一原一级高级警长邓雷被查)
 1. [林更新被曝开车载女友](https://so.toutiao.com/search?keyword=林更新被曝开车载女友)
 1. [日民众：应就黑金丑闻追究岸田责任](https://so.toutiao.com/search?keyword=日民众：应就黑金丑闻追究岸田责任)
-1. [博主：小米被打脸 荣耀笑了](https://so.toutiao.com/search?keyword=博主：小米被打脸+荣耀笑了)
 1. [周鸿祎的网贷生意3年赚140亿](https://so.toutiao.com/search?keyword=周鸿祎的网贷生意3年赚140亿)
 1. [越南女首富张美兰被判处死刑](https://so.toutiao.com/search?keyword=越南女首富张美兰被判处死刑)
 1. [特朗普：拜登已经放弃以色列](https://so.toutiao.com/search?keyword=特朗普：拜登已经放弃以色列)
@@ -60,7 +79,6 @@
 1. [瑞银预计美联储9月开始降息](https://so.toutiao.com/search?keyword=瑞银预计美联储9月开始降息)
 1. [金价狂飙背后真正推手是谁](https://so.toutiao.com/search?keyword=金价狂飙背后真正推手是谁)
 1. [专家谈解放军回应美日澳菲四国军演](https://so.toutiao.com/search?keyword=专家谈解放军回应美日澳菲四国军演)
-1. [国际金价跳水仍处历史高位](https://so.toutiao.com/search?keyword=国际金价跳水仍处历史高位)
 1. [广州白云区潭村拆迁惹争议](https://so.toutiao.com/search?keyword=广州白云区潭村拆迁惹争议)
 1. [杭州男子被狗抓伤 发病3天就离世](https://so.toutiao.com/search?keyword=杭州男子被狗抓伤+发病3天就离世)
 1. [中信证券：预计美联储6月不降息](https://so.toutiao.com/search?keyword=中信证券：预计美联储6月不降息)
